--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 dnspython==2.4.2
 docopt==0.6.2
 email-validator==2.1.0.post1
+et-xmlfile==1.1.0
 fastapi==0.104.0
 greenlet==3.0.1
 h11==0.14.0
@@ -20,6 +21,7 @@ MarkupSafe==2.1.3
 nltk==3.8.1
 num2words==0.5.13
 numpy==1.26.1
+openpyxl==3.1.2
 orjson==3.9.10
 pandas==2.1.2
 pydantic==2.4.2
@@ -32,10 +34,13 @@ python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.10.3
+scikit-learn==1.3.2
+scipy==1.11.3
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.22
 starlette==0.27.0
+threadpoolctl==3.2.0
 tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
